--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.1.2",
     "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^1.0.0",
     "highlight.js": "^10.0.2",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-highlight": "^0.12.0",
@@ -21,9 +26,9 @@
     "react-syntax-highlighter": "^12.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
